# paladins-analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/ai/: explainer.py  provider.py
backend/app/data/: paladins_known_keys.yaml  verified_precedence.yaml
backend/app/data/rules/: chaosengine.yaml  chaosgame.yaml  chaosinput.yaml  chaoslightmass.yaml  chaossystemsettings.yaml  chaosui.yaml  cross_file.yaml
backend/app/engine/: cleaned_patch.py  cross_file.py  evaluator.py  placebo_detector.py  precedence.py  registry.py  report_mode.py  resolver.py  rule_model.py  rules_loader.py
backend/app/parser/: content_classifier.py  tokens.py  ue3_ini.py  upload_policy.py
backend/tests/: test_content_classifier.py  test_cross_file_precedence.py  test_parser.py  test_patch_only_output.py  test_placebo_evidence.py  test_provider_abstraction.py  test_registry_provenance.py  test_report_mode.py  test_rules.py  test_upload_hardening.py
backend/tests/fixtures/clean_install/: CLEAN_INSTALL_PROVENANCE.md  ChaosEngine.ini  ChaosGame.ini  ChaosInput.ini  ChaosLightmass.ini  ChaosSystemSettings.ini  ChaosUI.ini
deploy/: bootstrap.sh
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/components/: ReportView.tsx
frontend/lib/: exportMarkdown.ts  reportTypes.ts
